<resources>
    <string name="KEY_ROWID">_id</string>
    <string name="KEY_MESSAGE">message</string>
    <string name="KEY_TIME">time</string>
    <string name="KEY_SNOOZE_UNIQUE_ID">snooze_unique_id</string>
    <string name="KEY_IS_PINNED">is_pinned</string>
    <string name="KEY_PHONE_NUMBER">phone_no</string>
    <string name="KEY_SEND_NOTI">send_noti</string>
    <string name="KEY_REMAKE">remake_noti</string>
    <string name="KEY_QUEUE_BUNDLE">queue_bundle</string>
    <string name="KEY_VIBRATE_BUNDLE">vibrate_bundle</string>
    <string name="KEY_ALARM_BUNDLE">alarm_bundle</string>
    <string name="KEY_INSERT">insert_noti</string>
    <string name="KEY_NO_DELETE_TOAST">no_delete_toast</string>
    <string name="KEY_VIBRATION_LENGTH">vibration_length_millis</string>
    <string name="KEY_VIBRATION_REPEAT">vibration_repeat_millis</string>
    <string name="KEY_VIBRATE_OPTIONS_ENTERED">vibrate_options_entered</string>
    <string name="KEY_VIBRATE_NONE">vibrate_none</string>
    <string name="KEY_VIBRATE_OPTIONS_ENTERED_CLICK">vibrate_options_entered_click</string>
    <string name="KEY_IS_QUEUED_NOTI">is_queued_noti</string>
    <string name="KEY_QUEUE_TIME">queue_time</string>
    <string name="KEY_QUEUE_REPEATS">queue_repeats</string>
    <string name="KEY_QUEUE_REPEAT_MILLIS">noti_repeat_millis</string>
    <string name="KEY_QUEUE_TIME_TO_END">time_to_end_queue_noti</string>
    <string name="KEY_LAST_QUEUE_TIME">last_queue_time</string>
    <string name="KEY_QUEUE_INFINITE_REPEATS">queue_infinite_repeats</string>
    <string name="KEY_QUEUE_REMINDER">queue_reminder</string>
    <string name="KEY_QUEUE_NONE">queue_none</string>
    <string name="KEY_QUEUE_INTENT">queue_intent</string>
    <string name="KEY_REMAKE_QUEUE">remake_queue</string>
    <string name="KEY_IS_QUEUED_NOTI_CLICK">is_queued_noti_click</string>
    <string name="KEY_IS_SMS">is_sms</string>
    <string name="KEY_SMS_QUEUE_TIME_TO_END">sms_time_to_end_queue</string>
    <string name="KEY_SMS_QUEUE_TIME">sms_queue_time</string>
    <string name="KEY_SMS_QUEUE_REPEAT_MILLIS">sms_queue_repeat_millis</string>
    <string name="KEY_SMS_QUEUE_REPEATS">sms_repeats</string>
    <string name="KEY_SMS_QUEUE_MESSAGE">sms_queue_message</string>
    <string name="KEY_SMS_QUEUE_PHONE_NUMBER">sms_queue_phone_number</string>
    <string name="KEY_SMS_QUEUE_UNIQUE_ID">sms_queue_id</string>
    <string name="KEY_SMS_QUEUE_REMAKE_FROM_REBOOT">sms_queue_remake_from_reboot</string>
    <string name="KEY_NOTI_HAS_ALARM">has_alarm</string>
    <string name="KEY_ALARM_TIME">alarm_time</string>
    <string name="KEY_ALARM_REPEATS">alarm_repeats</string>
    <string name="KEY_ALARM_REPEAT_MILLIS">alarm_repeat_millis</string>
    <string name="KEY_ALARM_IS_SILENT">alarm_is_silent</string>
    <string name="KEY_ALARM_IS_VIBRATE">alarm_is_vibrate</string>
    <string name="KEY_ALARM_MAX_VOLUME">alarm_max_volume</string>
    <string name="KEY_ALARM_IS_VOLUME_CRESCENDO">alarm_is_volume_crescendo</string>
    <string name="KEY_ALARM_SOUND_URI">sound_uri</string>
    <string name="KEY_ALARM_SNOOZE_LENGTH">alarm_snooze_length</string>
    <string name="KEY_ALARM_NONE">alarm_none</string>
    <string name="KEY_ALARM_SNOOZE_UNIQUE_ID">snooze_unique_id</string>
    <string name="KEY_ALARM_SNOOZE_REPEATS">snooze_alarm_repeats</string>
    <string name="KEY_ALARM_SNOOZE_TIME">snooze_alarm_time</string>
    <string name="KEY_ALARM_SNOOZED">snoozed</string>
    <string name="KEY_ALARM_FAKE_SNOOZED">fake_snoozed</string>
    <string name="KEY_ALARM_SAVED">saved_alarm</string>
    <string name="KEY_VIBRATE_INTENT">vibrate_intent</string>
    <string name="KEY_ALARM_INTENT">alarm_intent</string>
    <string name="app_name">Simple SMS</string>
    <string name="action_settings">Settings</string>
    <string name="blank_string"></string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="starting_noti">Open OmNotify</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="sendNotiTag">~</string>
    <string name="archive">Archive</string>
    <string name="settings">Settings</string>
    <string name="edit_message">Message</string>
    <string name="button_send_sms">Send SMS</string>
    <string name="send_to">To</string>
    <string name="sms_queued">SMS queued</string>
    <string name="pinned_notification">Pinned Noti</string>
    <string name="clearable_notification">Clearable Noti</string>
    <string name="notification_deleted">Notification deleted</string>
    <string name="all_notis_deleted">All notifications deleted</string>
    <string name="notification_saved">Notification saved</string>
    <string name="clearable_ticker">New clearable notification made</string>
    <string name="pinned_ticker">New pinned notification made</string>
    <string name="saved_ticker">Notification saved</string>
    <string name="expandable_content_text">Expandable - OmNotify</string>
    <string name="vibration_options">"Set Noti Vibration Options"</string>
    <string name="change_vibration_options">"Change Vibration Options"</string>
    <string name="fill_vibrate_dialog">Please enter both vibrate values</string>
    <string name="vibrate_dialog_repeat_period"><b>Vibration Repeat Period</b></string>
    <string name="vibrate_dialog_length"><b>Vibration Length</b></string>
    <string name="alarm_options">"Set Noti Alarm Options"</string>
    <string name="change_alarm_options">"Change Alarm Options"</string>
    <string name="alarm_tag">Alarm</string>
    <string name="queues_canceled">Queues for this noti have been cancelled</string>
    <string name="change_queue_options">Change Queue Options</string>
    <string name="time_picker_title"><b>Queue Time</b></string>
    <string name="date_picker_title"><b>Queue Date</b></string>
    <string name="number_pickers_title"><b>Repeat Period</b></string>
    <string name="picker_days">Days</string>
    <string name="picker_hours">Hours</string>
    <string name="picker_minutes">Minutes</string>
    <string name="send">Send</string>
    <string name="queue">Queue</string>
    <string name="alarm_time_picker_title"><b>Alarm Time</b></string>
    <string name="alarm_date_picker_title"><b>Alarm Date</b></string>
    <string name="dismiss_alarm"><b>Dismiss Alarm</b></string>
    <string name="snooze_alarm"><b>Snooze Alarm</b></string>
    <string name="action_search_title">Search</string>
    <string name="action_archive_title">Archive</string>
    <string name="action_delete_notis_title">Delete All Notis</string>
    <string name="action_delete_queued_sms_title">Deleted All Queued
    SMS</string>
    <string name="action_help_title">Help</string>
    <string name="pref_notis_category">Notis</string>
    <string name="pref_start_noti_on_off_title">Launch Simple SMS Noti</string>
    <string name="pref_start_noti_on_off_summ">Show Simple SMS Shortcut in Notification Area
    </string>
    <string name="pref_start_noti_title">Launch Noti Behavior</string>
    <string name="pref_start_noti_settings_summ_pinned">Pinned Launch Simple SMS Noti in the
        Notification Area
    </string>
    <string name="pref_start_noti_settings_summ_clearable">Clearable Launch Simple SMS Noti in the
        Notification Area
    </string>
    <string name="pref_start_noti_settings_title">Start Noti Settings</string>
    <string name="pref_start_noti_settings_default">Pinned</string>
    <string name="pref_start_noti_on_off">pref_start_noti_on_off_key</string>
    <string name="pref_start_noti_clearable">Clearable</string>
    <string name="pref_list_text_size_title">Message Box Text Size</string>
    <string name="pref_list_text_size_summ">Size of the messages in the message box. Restart required.</string>
    <string name="pref_list_text_size_dialog">Text Size</string>
    <string name="pref_list_category">Message Box</string>
    <string name="pref_list_sms_count_title">SMS Count</string>
    <string name="pref_list_sms_count_summ">Number of messages to display</string>
    <string name="pref_list_sms_count_dialog">SMS Count</string>
    <string name="pref_sms_category">SMS</string>
    <string name="pref_key_queue_sms_on_off">pref_key_queue_sms_on_off</string>
    <string name="pref_queue_sms_on_off_title">Queue SMS Functionality</string>
    <string name="pref_queue_sms_on_off_summ">Send SMS button opens up queue SMS dialog</string>
    <string name="pref_key_queue_sms_repeat">pref_key_queue_sms_repeat</string>
    <string name="pref_queue_sms_repeat_title">Queued SMS Repeat Number</string>
    <string name="pref_queue_sms_repeat_summ">Number of times queued SMS messages are repeatedly sent</string>
    <string name="pref_queue_sms_repeat_dialog_title">Repeat number</string>
    <string name="pref_send_noti_on_off_title">Send Noti Functionality</string>
    <string name="pref_send_noti_on_off_summ">If a phone number is entered, the \"make noti\" buttons
        send a noti (which can have either alarm or vibration options) to that phone number via SMS</string>
    <string name="pref_key_queue_noti_on_off">pref_key_queue_noti_on_off</string>
    <string name="pref_queue_noti_on_off_title">Queue Noti Functionality</string>
    <string name="pref_queue_noti_on_off_summ">Create Noti buttons open up queue noti dialog</string>
    <string name="pref_key_queue_noti_repeat">pref_key_queue_noti_repeat</string>
    <string name="pref_queue_noti_repeat_title">Queued Noti Repeat Number</string>
    <string name="pref_queue_noti_repeat_summ">Number of times queued notis are repeatedly created
        (if noti already exists,
        no new noti will be created)</string>
    <string name="pref_queue_noti_repeat_dialog_title">Repeat number</string>
    <string name="pref_queue_reminder_on_off_title">Queue Reminder Functionality</string>
    <string name="pref_queue_reminder_on_off_summ">Show a pop-up reminder at noti queue time</string>
    <string name="pref_alarm_category">Alarm Defaults</string>
    <string name="pref_alarm_sound_type_title">Sound Type</string>
    <string name="pref_alarm_sound_type_summ">Select Sound Type</string>
    <string name="pref_alarm_sound_type_dialog_title">Sound Type</string>
    <string name="pref_snooze_length_title">Snooze Length</string>
    <string name="pref_snooze_length_summ">Length of alarm snooze (in minutes)</string>
    <string name="pref_snooze_length_dialog_title">Snooze Length</string>
    <string name="pref_volume_crescendo_on_off_title">Volume Crescendo</string>
    <string name="pref_volume_crescendo_on_off_summ">Volume starts low and gradually increases</string>
    <string name="pref_vibrate_on_off_title">Vibrate</string>
    <string name="pref_silent_on_off_title">Silent</string>
    <string name="pref_themes_category">Themes</string>
    <string name="pref_themes_activity_title">Theme</string>
    <string name="pref_themes_activity_summ">Restart required</string>
    <string name="pref_themes_activity_dialog">Themes</string>
    <string name="pref_themes_sms_list_title">SMS List Theme</string>
    <string name="pref_themes_sms_list_summ">Restart required</string>
    <string name="pref_themes_sms_list_dialog">SMS List Themes</string>
    <string name="pref_themes_dialog_title">Dialog Theme</string>
    <string name="pref_themes_dialog_dialog">Dialog Themes</string>
    <string name="pref_themes_icon_color_title">Icon Color</string>
    <string name="pref_other_category">Other</string>
    <string name="pref_keyboard_on_off_title">Keyboard Popup</string>
    <string name="pref_keyboard_on_off_summ">Keyboard pops up automatically when OmNotify resumes</string>
    <string name="pref_receive_sms_toast_on_off_title">Received SMS Toast</string>
    <string name="pref_receive_sms_toast_on_off_summ">Show small toast popups containing the message and sender of received SMS</string>
</resources>